Fixed: Issue # 1 Style: Collapsed navbar align center

--- a/css/main.css
+++ b/css/main.css
@@ -104,9 +104,13 @@ textarea {
     border: 0;    
     transition: all 0.5s;
 }
-.navbar:hover {
+.navbar:hover, .navbar:focus {
     background-color: rgba(255, 255, 255, 0.9) !important;
     border: 0;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-top: none;
+    text-align: center;
 }
 .screen-size {
     height: 100vh !important;
